--- a/public/styles-output.css
+++ b/public/styles-output.css
@@ -1069,6 +1069,10 @@ video {
   grid-auto-flow: column dense;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1613,6 +1617,20 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.from-bgBase {
+  --tw-gradient-from: #1E2A78;
+  --tw-gradient-to: rgb(30 42 120 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-bgGradient {
+  --tw-gradient-to:  #49BCF6;
+}
+
 .decoration-slice {
   -webkit-box-decoration-break: slice;
           box-decoration-break: slice;
@@ -1721,6 +1739,11 @@ video {
 .object-scale-down {
   -o-object-fit: scale-down;
      object-fit: scale-down;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .text-left {
@@ -2179,22 +2202,23 @@ video {
 
 /* npx tailwindcss -i ./src/styles.css -o ./public/styles-output.css --watch */
 
-* {
-  box-sizing: border-box;
-}
-
 :root {
-  --primary-color: hsl(217, 97%, 53%);
-  --primary-textColor: hsl(240, 14%, 24%);
+  --primary-color: #136cfb;
+  --primary-textColor: #353546;
   --body-text-size: 16px;
   --baseline: 1.5rem;
   --doubleBaseline: calc(var(--baseline) * 2);
-  --background-gradient: linear-gradient(
-    180deg,
-    hsl(212, 22%, 83%) 100%,
-    hsl(210, 14%, 92%) 0%
-  );
-  --bacground-color: hsl(212, 22%, 83%);
+  --bacground-color: #cad3dd;
+  --titles: "Montserrat", sans-serif;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+  font-family: var(--titles);
+  font-size: 34px;
+  line-height: var(--doubleBaseline);
+  font-weight: 900;
 }
 
 body {
@@ -2209,21 +2233,110 @@ body {
 
 header {
   height: 100vh;
+  width: 100%;
   margin: 0;
-  background: linear-gradient(
-    180deg,
-    rgba(203, 212, 222, 1) 100%,
-    rgba(231, 234, 237, 1) 0%
-  );
+  padding: 0;
 }
+
+/* header .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: black;
+} */
 
 nav {
   margin: 0;
   padding: 0;
   font-weight: 800;
   color: var(--bacground-color);
-  background-color: var(--primary-color);
-  padding: 2rem 0;
+  background: var(--primary-color);
+  font-family: var(--titles);
+}
+
+nav > ul {
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+nav > ul > li {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.nav-section {
+  height: 100vw;
+  position: relative;
+}
+
+.nav-section > div {
+  position: relative;
+  height: 100vw;
+  top: calc(50vw - 25vw);
+}
+
+.call-to-action {
+  margin: 0;
+  padding: 0.5rem 0.5rem;
+  color: var(--bacground-color);
+  background: var(--primary-color);
+  font-family: var(--titles);
+  font-weight: 700;
+  border-radius: 0.5rem;
+  border-color: var(--primary-color);
+  border-width: 0.4rem;
+  border-style: solid;
+  text-align: center;
+}
+
+.head-calToAction > ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  font-family: var(--titles);
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: var(--baseline);
+  margin-bottom: var(--doubleBaseline);
+}
+
+.head-calToAction > ul > li {
+  position: relative;
+}
+
+.head-calToAction > ul > li::before {
+  --size: 0.4rem;
+  content: "";
+  width: var(--size);
+  height: var(--size);
+  background: var(--primary-textColor);
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 0.5em;
+  position: relative;
+  top: -10%;
+}
+
+.head-calToAction > ul > li:first-child:before {
+  content: none;
+}
+
+.head-calToAction > p {
+  font-family: var(--titles);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: var(--baseline);
+  text-align: center;
+  margin-bottom: calc(var(--baseline) * 4);
 }
 
 .hover\:font-bold:hover {
