--- a/src/styles.css
+++ b/src/styles.css
@@ -1,121 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 /* npx tailwindcss -i ./src/styles.css -o ./public/styles-output.css --watch */
 
-:root {
-  --primary-color: #0065eb;
-  --primary-textColor: #353546;
-  --body-text-size: 16px;
-  --baseline: 1.5rem;
-  --doubleBaseline: calc(var(--baseline) * 2);
-  --titles: "Montserrat", sans-serif;
-  --background-color: #d5d9dd;
-}
-h1,
-h2 {
-  margin: 0;
-  padding: 0;
-  font-family: var(--titles);
-  font-size: 30px;
-  line-height: var(--doubleBaseline);
-  font-weight: 900;
-}
-p {
-  margin-top: var(--doubleBaseline);
-}
-
-h2 {
-  color: var(--primary-textColor);
-}
-body {
-  height: 100vw;
-  margin: 0;
-  font-family: "Open Sans", sans-serif;
-  font-size: var(--body-text-size);
-  line-height: var(--baseline);
-  color: var(--primary-textColor);
-  background: var(--background-color);
-  text-align: center;
-}
-header {
-  color: var(--background-color);
-  height: 100vh;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  background: linear-gradient(#005ded, #00c6fb);
-  /* background: linear-gradient(#00c6fb, #005ded); */
-}
-footer {
-  color: var(--background-color);
-  background: var(--primary-textColor);
-}
-
-nav {
-  margin: 0;
-  padding: 0;
-  font-weight: 800;
-  color: var(--background-color);
-  background: var(--primary-color);
-  font-family: var(--titles);
-}
-nav > ul {
-  text-decoration: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-}
-
-nav > ul > li {
-  @apply px-3 py-4;
-}
-.nav-section {
-  height: 91vh;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-}
-
-.btn {
-  margin: 0;
-  padding: 0.8rem 0.5rem;
-  font-family: var(--titles);
-  font-weight: 700;
-  border-radius: 0.5rem;
-  text-align: center;
-  color: var(--background-color);
-  background: var(--primary-color);
-
-  transition: all 200ms ease-in-out;
-}
-.btn-primary {
-  border-color: var(--primary-color);
-  border-width: 0.4rem;
-  border-style: solid;
-}
-.call-to-action {
-  color: var(--primary-textColor);
-  background: linear-gradient(hsl(27, 85%, 73%), hsl(13, 90%, 76%));
-}
-
-.head-calToAction > ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  font-family: var(--titles);
-  font-size: 14px;
-  font-weight: 600;
-  margin-top: var(--baseline);
-  margin-bottom: var(--doubleBaseline);
-}
-.head-calToAction > ul > li::before {
+/* .head-calToAction > ul > li::before {
   content: "";
   height: 100%; /* needed to work*/
   width: 0.4rem;
@@ -127,32 +18,4 @@ nav > ul > li {
 }
 .head-calToAction > ul > li:first-child:before {
   display: none;
-}
-
-.head-calToAction > p {
-  font-family: var(--titles);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: var(--baseline);
-  text-align: center;
-  margin-bottom: var(--doubleBaseline);
-}
-.logo-examles {
-  aspect-ratio: 1 / 1;
-  background-color: #353546;
-  clip-path: circle(50% at 50% 50%);
-}
-
-.animation-examles {
-  aspect-ratio: 16/9;
-  background-color: #353546;
-  border-radius: 0.5rem;
-}
-.web-examles {
-  aspect-ratio: 1/1;
-  background-color: #353546;
-  border-radius: 0.5rem;
-}
-.main-body > section {
-  margin-bottom: calc(var(--doubleBaseline) * 2);
-}
+} */
