--- a/src/Components/fonts.css
+++ b/src/Components/fonts.css
@@ -1,8 +1,6 @@
 /* font-family: 'Montserrat', sans-serif;
 font-family: 'Open Sans', sans-serif; */
 
-
-
 h1,
 h2,
 h3,
@@ -32,7 +30,13 @@ h3 {
   padding-bottom: 0.5rem;
 }
 h6 {
-  font-size: var(--tx-small);
+  font-size: 0.8rem;
   font-weight: 500;
   letter-spacing: 0.1em;
+}
+
+@media (width >= 768px) {
+  h6 {
+    font-size: 1rem;
+  }
 }
