--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -1,22 +1,9 @@
 header {
   color: var(--backgroundColor);
   height: 100vh;
-  background: hsla(255, 52%, 35%, 1);
 
   background: linear-gradient(
-    90deg,
-    hsla(255, 52%, 35%, 1) 0%,
-    hsla(233, 56%, 45%, 1) 100%
-  );
-
-  background: -moz-linear-gradient(
-    90deg,
-    hsla(255, 52%, 35%, 1) 0%,
-    hsla(233, 56%, 45%, 1) 100%
-  );
-
-  background: -webkit-linear-gradient(
-    90deg,
+    0deg,
     hsla(255, 52%, 35%, 1) 0%,
     hsla(233, 56%, 45%, 1) 100%
   );
@@ -47,3 +34,39 @@ nav > ul > li > a {
   font-weight: 800;
   text-align: center;
 }
+
+.presentation {
+  display: flex;
+  flex-direction: column;
+  height: 90%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+}
+
+@media (width >= 768px) {
+  header {
+    color: var(--textColor);
+    background: none;
+    background-color: var(--backgroundColor);
+  }
+  nav > ul > li > a {
+    font-weight: 700;
+    font-size: 1.1rem;
+    letter-spacing: 0.1rem;
+  }
+  .presentation {
+    justify-content: end;
+    height: 93%;
+  }
+
+  .presentation-image {
+    background: var(--primaryColor);
+    margin-top: 6rem;
+    height: 40vh;
+    width: 100vw;
+
+    box-shadow: inset 0 0.2rem 0.3rem hsla(0, 0%, 0%, 0.14);
+  }
+} ;
