--- a/src/_mediaTablet.scss
+++ b/src/_mediaTablet.scss
@@ -2,10 +2,16 @@
 
 // header
 @media (width >= 768px) {
+  body {
+    text-align: start;
+  }
   header {
     color: $textColor;
     background: none;
-    background-color: $backgroundColor;
+  }
+  nav {
+    background: $primaryColor;
+    background: linear-gradient($primaryColor, #333195);
   }
   nav > ul > li > a {
     font-weight: 700;
@@ -18,17 +24,23 @@
   }
 
   .presentation-image {
-    background: $primaryColor;
     margin-top: 6rem;
     height: 40vh;
     width: 100vw;
 
     box-shadow: inset 0 0.2rem 0.3rem hsla(0, 0%, 0%, 0.14);
   }
-}
+  .call-to-action {
+    font-size: 1.3em;
+    color: desaturate($secondaryColor, 10%);
+    letter-spacing: 0.1rem;
+    .button {
+      background: desaturate($accentColor, 15%);
+    }
+  }
 
-// main
-@media (width >= 768px) {
+  // main
+
   .main-sections {
     display: flex;
     justify-content: space-between;
