--- a/src/_variable.scss
+++ b/src/_variable.scss
@@ -1,5 +1,7 @@
 // variable
 $textColor: #353546;
-$backgroundColor: #ebeae8;
+$backgroundColor: #e2e0db;
 $secondaryColor: #432b89;
 $primaryColor: #3240b3;
+// $primaryColor: #3240b3;
+$accentColor: #6de38c;
