--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -31,6 +31,15 @@ h3 {
   letter-spacing: 0.05rem;
   padding-bottom: 0.5rem;
 }
+.presentation {
+  h6 {
+    margin-bottom: 2rem;
+  }
+  h1 {
+    padding-top: 2rem;
+    margin-bottom: 1rem;
+  }
+}
 h6 {
   font-size: 0.8rem;
   font-weight: 500;
