--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
 @import "variable";
+@import "fonts";
 @import "base";
 @import "header";
 @import "main";
-@import "fonts";
 @import "utilities";
 @import "mediaTablet";
+@import "mediaDesktops";
