--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,57 @@
 @charset "UTF-8";
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Open Sans', sans-serif; */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-weight: 900;
+  font-size: 2.12rem;
+  letter-spacing: 0.1rem;
+}
+
+h2 {
+  color: #353546;
+  padding-bottom: 0.5em;
+  font-weight: 900;
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+}
+
+h3 {
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  padding-bottom: 0.5rem;
+}
+
+.presentation h6 {
+  margin-bottom: 2rem;
+}
+.presentation h1 {
+  padding-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+h6 {
+  font-size: 0.8rem;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+}
+
+@media (width >= 768px) {
+  h6 {
+    font-size: 1rem;
+  }
+}
 * {
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
@@ -30,82 +83,6 @@ footer {
 
 main section {
   margin-top: 5rem;
-}
-
-header {
-  color: #e2e0db;
-  height: 100vh;
-  background: linear-gradient(0deg, hsl(255, 52%, 35%) 0%, hsl(233, 56%, 45%) 100%);
-}
-
-nav {
-  display: flex;
-  justify-content: center;
-  background-color: #3240b3;
-}
-
-nav > ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-nav > ul > li,
-nav > ul > li > a {
-  color: #e2e0db;
-  list-style: none;
-  text-decoration: none;
-}
-
-.call-to-action {
-  margin-top: 6em;
-  color: #432b89;
-  font-weight: 800;
-  text-align: center;
-}
-.call-to-action .button {
-  background-color: #6de38c;
-}
-
-.presentation {
-  display: flex;
-  flex-direction: column;
-  height: 90%;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  position: relative;
-}
-
-.work-titles {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  justify-content: center;
-  position: relative;
-}
-
-.work-titles li ~ li::before {
-  content: "●";
-  font-size: 0.5em;
-  padding: 0 1.7em;
-  position: relative;
-  top: -0.4em;
-}
-
-.about-me .work-titles {
-  font-size: 0.9rem;
-  letter-spacing: 0.1rem;
-  font-weight: 500;
-}
-
-.about-me .work-titles li ~ li::before {
-  padding: 0 1em;
 }
 
 /* font-family: 'Montserrat', sans-serif;
@@ -142,6 +119,14 @@ h3 {
   padding-bottom: 0.5rem;
 }
 
+.presentation h6 {
+  margin-bottom: 2rem;
+}
+.presentation h1 {
+  padding-top: 2rem;
+  margin-bottom: 1rem;
+}
+
 h6 {
   font-size: 0.8rem;
   font-weight: 500;
@@ -153,6 +138,80 @@ h6 {
     font-size: 1rem;
   }
 }
+header {
+  color: #e2e0db;
+  height: 100vh;
+  background: linear-gradient(0deg, hsl(255, 52%, 35%) 0%, hsl(233, 56%, 45%) 100%);
+}
+
+nav {
+  background-color: #3240b3;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+nav ul li {
+  padding: 1rem 2rem;
+  list-style: none;
+}
+nav ul li a {
+  color: #e2e0db;
+  text-decoration: none;
+}
+
+.presentation {
+  display: flex;
+  flex-direction: column;
+  height: 90%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+}
+
+.call-to-action {
+  margin-top: 6em;
+  color: #432b89;
+  font-weight: 800;
+  text-align: center;
+}
+.call-to-action .button {
+  background-color: #6de38c;
+}
+
+.work-titles {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: center;
+  position: relative;
+}
+
+.work-titles li ~ li::before {
+  content: "●";
+  font-size: 0.5em;
+  padding: 0 1.7em;
+  position: relative;
+  top: -0.4em;
+}
+
+.about-me .work-titles {
+  font-size: 0.9rem;
+  letter-spacing: 0.1rem;
+  font-weight: 500;
+}
+
+.about-me .work-titles li ~ li::before {
+  padding: 0 1em;
+}
+
 .img {
   aspect-ratio: 1/1;
 }
@@ -184,6 +243,23 @@ h6 {
   opacity: 0.8;
 }
 
+@media (width > 576px) and (orientation: landscape) {
+  .presentation {
+    margin-top: 2rem;
+    justify-content: flex-end;
+    margin-bottom: 2rem;
+  }
+  .presentation h6 {
+    margin-bottom: 0.5rem;
+  }
+  .presentation h1 {
+    padding-top: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  main {
+    padding-top: 1rem;
+  }
+}
 @media (width >= 768px) {
   body {
     text-align: start;
@@ -231,5 +307,119 @@ h6 {
   }
   .about-me {
     margin-top: 10rem;
+  }
+}
+@media (width >= 768px) and (orientation: landscape) {
+  header {
+    height: 100vh;
+  }
+  main {
+    margin-top: 0;
+  }
+  .presentation {
+    flex-direction: row;
+    margin-top: 0;
+    margin-bottom: 0;
+    align-items: center;
+    margin-right: 0;
+  }
+  .presentation div {
+    margin-right: 0.9rem;
+  }
+  .presentation .presentation-image {
+    margin: 0;
+    height: 100%;
+  }
+}
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Open Sans', sans-serif; */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-weight: 900;
+  font-size: 2.12rem;
+  letter-spacing: 0.1rem;
+}
+
+h2 {
+  color: #353546;
+  padding-bottom: 0.5em;
+  font-weight: 900;
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+}
+
+h3 {
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  padding-bottom: 0.5rem;
+}
+
+.presentation h6 {
+  margin-bottom: 2rem;
+}
+.presentation h1 {
+  padding-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+h6 {
+  font-size: 0.8rem;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+}
+
+@media (width >= 768px) {
+  h6 {
+    font-size: 1rem;
+  }
+}
+@media (width >= 992px) {
+  body {
+    font-size: 10px;
+    text-align: left;
+  }
+  h6 {
+    font-size: 0.7rem;
+  }
+  nav ul li {
+    padding: 1rem 2rem;
+  }
+  nav ul li a {
+    font-size: 0.7rem;
+  }
+  .presentation {
+    text-align: left;
+  }
+  .presentation .call-to-action {
+    font-size: 0.8rem;
+    margin-left: 0;
+    display: inline-block;
+  }
+  .presentation .presentation-text {
+    display: inline-block;
+    margin: auto;
+  }
+  .presentation .work-titles {
+    justify-content: flex-start;
+  }
+  .presentation .presentation-image {
+    width: 60%;
+  }
+  main {
+    padding-top: 5rem;
+  }
+  main .about-me .work-titles {
+    font-size: 0.7rem;
   }
 }
