--- a/src/_header.scss
+++ b/src/_header.scss
@@ -1,4 +1,5 @@
 @import "variable";
+@import "fonts";
 
 header {
   color: $backgroundColor;
@@ -12,32 +13,22 @@ header {
 }
 
 nav {
-  display: flex;
-  justify-content: center;
   background-color: $primaryColor;
-}
-nav > ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-nav > ul > li,
-nav > ul > li > a {
-  color: $backgroundColor;
-  list-style: none;
-  text-decoration: none;
-}
-
-.call-to-action {
-  .button {
-    background-color: $accentColor;
+  ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    li {
+      padding: 1rem 2rem;
+      list-style: none;
+      a {
+        color: $backgroundColor;
+        text-decoration: none;
+      }
+    }
   }
-  margin-top: 6em;
-  color: $secondaryColor;
-  font-weight: 800;
-  text-align: center;
 }
 
 .presentation {
@@ -48,4 +39,14 @@ nav > ul > li > a {
   justify-content: center;
   text-align: center;
   position: relative;
+}
+
+.call-to-action {
+  .button {
+    background-color: $accentColor;
+  }
+  margin-top: 6em;
+  color: $secondaryColor;
+  font-weight: 800;
+  text-align: center;
 }
