--- a/css/index.css
+++ b/css/index.css
@@ -1,425 +1,160 @@
 @charset "UTF-8";
-/* font-family: 'Montserrat', sans-serif;
-font-family: 'Open Sans', sans-serif; */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+.list-row {
+  display: flex;
+}
+.list-row li:first-child::before {
+  content: none;
+  margin: 0;
+}
+.list-row li:before {
+  content: "◆";
+  color: #3240b3;
+  border-radius: 100%;
+  margin: 0 0.5rem;
+}
+
+.shadow {
+  box-shadow: 0 5px 7px -5px hsla(0, 0%, 0%, 0.5);
+}
+
+.button {
+  width: fit-content;
+  margin: auto;
+  cursor: pointer;
+}
+.button a {
+  font-family: "Montserrat";
+  color: #e2e0db;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 800;
+  letter-spacing: 0.05rem;
+  display: inline-block;
+  background: inherit;
+  padding: 0.7em 1.5em;
+  border-radius: 0.5em;
+  box-shadow: 0 5px 7px -5px hsla(0, 0%, 0%, 0.5);
+  border: solid 0.2rem;
+}
+
+body {
+  color: #353546;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  font-size: 16px;
+  font-family: "Open Sans";
+  background: #e2e0db;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
+  font-family: "Montserrat";
+  color: inherit;
 }
 
-h1 {
-  font-weight: 900;
-  font-size: 2.12rem;
-  letter-spacing: 0.1rem;
-}
-
+h1,
 h2 {
-  color: #353546;
-  padding-bottom: 0.5em;
   font-weight: 900;
-  font-size: 1.6rem;
-  letter-spacing: 0.1rem;
 }
 
-h3 {
-  font-size: 1rem;
-  font-weight: 600;
-  letter-spacing: 0.05rem;
-  padding-bottom: 0.5rem;
-}
-
-.presentation h6 {
-  margin-bottom: 2rem;
-}
-.presentation h1 {
-  padding-top: 2rem;
-  margin-bottom: 1rem;
-}
-
-h6 {
-  font-size: 0.8rem;
-  font-weight: 500;
-  letter-spacing: 0.1em;
-}
-
-@media (width >= 768px) {
-  h6 {
-    font-size: 1rem;
-  }
-}
-* {
-  box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
-}
-
-p {
+ul {
+  color: inherit;
   margin: 0;
   padding: 0;
 }
-
-html,
-body {
-  height: 100%;
-  color: #353546;
-  text-align: center;
-  background: #e2e0db;
+ul li {
+  list-style: none;
 }
 
 a,
-a:active {
+a:visited {
   color: inherit;
   text-decoration: none;
 }
 
-main,
-footer {
-  margin-top: 5rem;
-}
-
-main section {
-  margin-top: 5rem;
-}
-
-/* font-family: 'Montserrat', sans-serif;
-font-family: 'Open Sans', sans-serif; */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Montserrat", sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-h1 {
-  font-weight: 900;
-  font-size: 2.12rem;
-  letter-spacing: 0.1rem;
-}
-
-h2 {
-  color: #353546;
-  padding-bottom: 0.5em;
-  font-weight: 900;
-  font-size: 1.6rem;
-  letter-spacing: 0.1rem;
-}
-
-h3 {
-  font-size: 1rem;
-  font-weight: 600;
-  letter-spacing: 0.05rem;
-  padding-bottom: 0.5rem;
-}
-
-.presentation h6 {
-  margin-bottom: 2rem;
-}
-.presentation h1 {
-  padding-top: 2rem;
-  margin-bottom: 1rem;
-}
-
-h6 {
-  font-size: 0.8rem;
-  font-weight: 500;
-  letter-spacing: 0.1em;
-}
-
-@media (width >= 768px) {
-  h6 {
-    font-size: 1rem;
+@media (width >= 992px) {
+  body {
+    font-size: 12px;
   }
 }
 header {
-  color: #e2e0db;
   height: 100vh;
-  background: linear-gradient(0deg, hsl(255, 52%, 35%) 0%, hsl(233, 56%, 45%) 100%);
-}
-
-nav {
-  background-color: #3240b3;
-}
-nav ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-nav ul li {
-  padding: 1rem 2rem;
-  list-style: none;
-}
-nav ul li a {
+  width: 100vw;
+  background: linear-gradient(#3240b3, #432b89);
   color: #e2e0db;
-  text-decoration: none;
 }
-
-.presentation {
+header nav {
+  background: #3240b3;
+  width: 100vw;
+}
+header nav ul {
+  justify-content: space-evenly;
+  color: #e2e0db;
+  display: flex;
+}
+header nav ul li {
+  font-size: 1rem;
+  padding: 1rem 1rem;
+  font-weight: 600;
+}
+header .list-row {
+  display: flex;
+}
+header .list-row li:before {
+  color: #e2e0db;
+}
+header section {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  height: 90%;
+  justify-content: center;
   align-items: center;
-  justify-content: center;
-  text-align: center;
-  position: relative;
 }
-
-.call-to-action {
-  margin-top: 6em;
+header section div {
+  margin: 1rem;
+}
+header section div .button a {
+  font-size: 0.8rem;
   color: #432b89;
-  font-weight: 800;
+  background: #6de38c;
+  border: solid #6de38c;
+}
+
+main {
   text-align: center;
 }
-.call-to-action .button {
-  background-color: #6de38c;
+main section {
+  padding-top: 3rem;
+  width: 85%;
+  margin: auto;
 }
-
-.work-titles {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  justify-content: center;
-  position: relative;
-}
-
-.work-titles li ~ li::before {
-  content: "●";
-  font-size: 0.5em;
-  padding: 0 1.7em;
-  position: relative;
-  top: -0.4em;
-}
-
-.about-me .work-titles {
-  font-size: 0.9rem;
-  letter-spacing: 0.1rem;
-  font-weight: 500;
-}
-
-.about-me .work-titles li ~ li::before {
-  padding: 0 1em;
-}
-
-.img {
-  aspect-ratio: 1/1;
-}
-
-.margins {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
-
-.shadowsm {
-  box-shadow: 0 0.2rem 0.3rem hsla(0, 0%, 0%, 0.2);
-}
-
-.button {
-  background-color: inherit;
-  padding: 0.7em 1.5rem;
-  border-radius: 0.5em;
-}
-
-.about-me .button {
-  letter-spacing: 0.1em;
-  color: #e2e0db;
+main section .button a {
   background-color: #3240b3;
-  margin-bottom: 1rem;
+  border: solid #3240b3;
+}
+main section .list-row {
+  justify-content: center;
 }
 
-.about-me p {
-  font-size: 0.8rem;
-  opacity: 0.8;
+footer {
+  margin-top: 3rem;
 }
 
-@media (width > 576px) and (orientation: landscape) {
-  .presentation {
-    margin-top: 2rem;
-    justify-content: flex-end;
-    margin-bottom: 2rem;
-  }
-  .presentation h6 {
-    margin-bottom: 0.5rem;
-  }
-  .presentation h1 {
-    padding-top: 1rem;
-    margin-bottom: 0.5rem;
-  }
-  main {
-    padding-top: 1rem;
-  }
-}
-@media (width >= 768px) {
-  body {
-    text-align: start;
-  }
-  header {
-    color: #353546;
-    background: none;
-  }
-  nav {
-    background: #3240b3;
-    background: linear-gradient(#3240b3, #333195);
-  }
-  nav > ul > li > a {
-    font-weight: 700;
-    font-size: 1.1rem;
-    letter-spacing: 0.1rem;
-  }
-  .presentation {
-    justify-content: end;
-    height: 93%;
-  }
-  .presentation-image {
-    margin-top: 6rem;
-    height: 40vh;
-    width: 100vw;
-    box-shadow: inset 0 0.2rem 0.3rem hsla(0, 0%, 0%, 0.14);
-  }
-  .call-to-action {
-    font-size: 1.2em;
-    color: #473480;
-    letter-spacing: 0.1rem;
-  }
-  .call-to-action .button {
-    background: #7ad692;
-  }
-  .main-sections {
-    display: flex;
-    justify-content: space-between;
-  }
-  .section-img {
-    width: 40%;
-  }
-  .section-text {
-    width: 55%;
-  }
-  .about-me {
-    margin-top: 10rem;
-  }
-}
-@media (width >= 768px) and (orientation: landscape) {
-  header {
-    height: 100vh;
-  }
-  main {
-    margin-top: 0;
-  }
-  .presentation {
-    flex-direction: row;
-    margin-top: 0;
-    margin-bottom: 0;
-    align-items: center;
-    margin-right: 0;
-  }
-  .presentation div {
-    margin-right: 0.9rem;
-  }
-  .presentation .presentation-image {
-    margin: 0;
-    height: 100%;
-  }
-}
-/* font-family: 'Montserrat', sans-serif;
-font-family: 'Open Sans', sans-serif; */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Montserrat", sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-h1 {
-  font-weight: 900;
-  font-size: 2.12rem;
-  letter-spacing: 0.1rem;
-}
-
-h2 {
-  color: #353546;
-  padding-bottom: 0.5em;
-  font-weight: 900;
-  font-size: 1.6rem;
-  letter-spacing: 0.1rem;
-}
-
-h3 {
-  font-size: 1rem;
-  font-weight: 600;
-  letter-spacing: 0.05rem;
-  padding-bottom: 0.5rem;
-}
-
-.presentation h6 {
-  margin-bottom: 2rem;
-}
-.presentation h1 {
-  padding-top: 2rem;
-  margin-bottom: 1rem;
-}
-
-h6 {
-  font-size: 0.8rem;
-  font-weight: 500;
-  letter-spacing: 0.1em;
-}
-
-@media (width >= 768px) {
-  h6 {
-    font-size: 1rem;
-  }
-}
 @media (width >= 992px) {
-  body {
-    font-size: 10px;
-    text-align: left;
-  }
-  h6 {
-    font-size: 0.7rem;
-  }
-  nav ul li {
-    padding: 1rem 2rem;
-  }
-  nav ul li a {
-    font-size: 0.7rem;
-  }
-  .presentation {
-    text-align: left;
-  }
-  .presentation .call-to-action {
-    font-size: 0.8rem;
-    margin-left: 0;
-    display: inline-block;
-  }
-  .presentation .presentation-text {
-    display: inline-block;
-    margin: auto;
-  }
-  .presentation .work-titles {
-    justify-content: flex-start;
-  }
-  .presentation .presentation-image {
-    width: 60%;
-  }
-  main {
-    padding-top: 5rem;
-  }
-  main .about-me .work-titles {
-    font-size: 0.7rem;
+  footer div {
+    margin: 0 auto;
+    width: 70%;
   }
 }
