--- a/src/_main.scss
+++ b/src/_main.scss
@@ -1,29 +1,20 @@
-@import "variable";
-
-.work-titles {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
+main {
   text-align: center;
-  justify-content: center;
-  position: relative;
+  section {
+    padding-top: 3rem;
+    width: 85%;
+    margin: auto;
+
+    .button {
+      a {
+        background-color: $primaryColor;
+        border: solid $primaryColor;
+      }
+    }
+    .list-row {
+      justify-content: center;
+    }
+  }
 }
 
-.work-titles li ~ li::before {
-  content: "●";
-  font-size: 0.5em;
-  padding: 0 1.7em;
-  position: relative;
-  top: -0.4em;
-}
-.about-me .work-titles {
-  font-size: 0.9rem;
-  letter-spacing: 0.1rem;
-  font-weight: 500;
-}
-.about-me .work-titles li ~ li::before {
-  padding: 0 1em;
-}
 
