--- a/src/_utilities.scss
+++ b/src/_utilities.scss
@@ -1,31 +1,43 @@
-@import "variable";
-
-.img {
-  aspect-ratio: 1/1;
+// horizontal list with decoration
+.list-row {
+  display: flex;
+  li {
+    &:first-child::before {
+      content: none;
+      margin: 0;
+    }
+    &:before {
+      content: "◆";
+      color: $primaryColor;
+      border-radius: 100%;
+      margin: 0 0.5rem;
+    }
+  }
 }
 
-.margins {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+// shadow
+.shadow {
+  box-shadow: 0 5px 7px -5px hsla(0, 0%, 0%, 0.5);
 }
 
-.shadowsm {
-  box-shadow: 0 0.2rem 0.3rem hsla(0, 0%, 0%, 0.2);
-}
+// button
 
 .button {
-  background-color: inherit;
-  padding: 0.7em 1.5rem;
-  border-radius: 0.5em;
-}
-
-.about-me .button {
-  letter-spacing: 0.1em;
-  color: $backgroundColor;
-  background-color: #3240b3;
-  margin-bottom: 1rem;
-}
-.about-me p {
-  font-size: 0.8rem;
-  opacity: 0.8;
+  width: fit-content;
+  margin: auto;
+  cursor: pointer;
+  a {
+    font-family: "Montserrat";
+    color: $backgroundColor;
+    text-align: center;
+    font-size: $sm-font-size;
+    font-weight: 800;
+    letter-spacing: 0.05rem;
+    display: inline-block;
+    background: inherit;
+    padding: 0.7em 1.5em;
+    border-radius: 0.5em;
+    box-shadow: 0 5px 7px -5px hsla(0, 0%, 0%, 0.5);
+    border: solid 0.2rem;
+  }
 }
