--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,10 @@
   box-shadow: 0 5px 7px -5px hsla(0, 0%, 0%, 0.5);
 }
 
+.shadow-in {
+  box-shadow: inset 0 5px 7px -5px hsla(0, 0%, 0%, 0.5);
+}
+
 .button {
   width: fit-content;
   margin: auto;
@@ -147,14 +151,17 @@ main section .button a {
 main section .list-row {
   justify-content: center;
 }
+main section img {
+  margin-bottom: 1.5rem;
+}
+main .about-me p {
+  font-size: 12px;
+}
 
 footer {
   margin-top: 3rem;
 }
-
-@media (width >= 992px) {
-  footer div {
-    margin: 0 auto;
-    width: 70%;
-  }
+footer div {
+  font-size: 12px;
+  text-align: center;
 }
