--- a/src/_utilities.scss
+++ b/src/_utilities.scss
@@ -19,6 +19,9 @@
 .shadow {
   box-shadow: 0 5px 7px -5px hsla(0, 0%, 0%, 0.5);
 }
+.shadow-in {
+  box-shadow: inset 0 5px 7px -5px hsla(0, 0%, 0%, 0.5);
+}
 
 // button
 
