--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import "variables";
-
+@import "breakponts";
 // utilities
 @import "utilities";
 
@@ -10,3 +10,5 @@
 @import "header";
 @import "main";
 @import "footer";
+
+// mediaqueary
