--- a/src/_footer.scss
+++ b/src/_footer.scss
@@ -1,13 +1,20 @@
-@import "variables";
-
 footer {
   margin-top: 3rem;
+
+  .footer {
+    margin: 0;
+    padding: 1rem;
+  }
+
   div {
     font-size: $sm-font-size;
     text-align: center;
+    padding: 1rem 0;
+    background: $backgroundColor;
+    box-shadow: inset 0 5px 4px 0px hsla(0, 0%, 61%, 0.1);
+
+    p {
+      margin: 0;
+    }
   }
 }
-
-// mediaQuery phone
-// mediaQuery tablet
-// mediaQuery destop
