--- a/src/_utilities.scss
+++ b/src/_utilities.scss
@@ -8,7 +8,7 @@
     }
     &:before {
       content: "◆";
-      color: $primaryColor;
+      color: $textColor;
       border-radius: 100%;
       margin: 0 0.5rem;
     }
