prepare for grid system
preparing for making a grid system for the main sections of the site

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -43,10 +43,7 @@ a:visited {
   text-decoration: none;
 }
 
-// mediaQuery phone
-// mediaQuery tablet
-// mediaQuery destop
-@media (width >= 992px) {
+@include desktops {
   body {
     font-size: $sm-font-size;
   }
