--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ a:visited {
   text-decoration: none;
 }
 
-@media (width >= 992px) {
+@media (min-width: 992px) {
   body {
     font-size: 12px;
   }
@@ -156,6 +156,10 @@ main section {
   padding-top: 3rem;
   width: 85%;
   margin: auto;
+}
+main section .section-img {
+  width: fit-content;
+  margin: 0 auto;
 }
 main section .button a {
   background-color: #3240b3;
