--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,7 +6,8 @@ $primaryColor: #3240b3;
 $secondaryColor: #432b89;
 $accentColor: #6de38c;
 $textColor: #353546;
-$backgroundColor: #e2e0db;
+$backgroundColorTop: hsl(43deg 6% 89%);
+$backgroundColorBottom: (hsl(43deg 9% 89%));
 
 // margins
 $basic-margin-size: 1rem;
