--- a/src/_base.scss
+++ b/src/_base.scss
@@ -9,7 +9,7 @@ body {
   width: 100%;
   font-size: $basic-font-size;
   font-family: "Open Sans";
-  background: $backgroundColor;
+  background: linear-gradient($backgroundColorTop, $backgroundColorBottom);
 }
 
 h1,
@@ -41,10 +41,4 @@ a,
 a:visited {
   color: inherit;
   text-decoration: none;
-}
-
-@include desktops {
-  body {
-    font-size: $sm-font-size;
-  }
 }
