--- a/src/_footer.scss
+++ b/src/_footer.scss
@@ -10,7 +10,7 @@ footer {
     font-size: $sm-font-size;
     text-align: center;
     padding: 1rem 0;
-    background: $backgroundColor;
+    background: $backgroundColorTop;
     box-shadow: inset 0 5px 4px 0px hsla(0, 0%, 61%, 0.1);
 
     p {
