--- a/src/_header.scss
+++ b/src/_header.scss
@@ -1,22 +1,34 @@
-@import "variables";
+@use "sass:math";
 
 header {
   height: 100vh;
   width: 100vw;
   background: linear-gradient($primaryColor, $secondaryColor);
-  color: $backgroundColor;
+  color: $backgroundColorTop;
   text-align: center;
+  overflow: hidden;
+  position: relative;
   nav {
     background: $primaryColor;
     width: 100vw;
+    @include desktops {
+      background: linear-gradient($primaryColor, hsl(245deg 56% 40%));
+      
+    }
     ul {
       justify-content: space-evenly;
-      color: $backgroundColor;
+      color: $backgroundColorTop;
       display: flex;
+      @include tablets {
+        justify-content: center;
+      }
       li {
         font-size: 1rem;
-        padding: 1rem 1rem;
+        padding: 1rem;
         font-weight: 600;
+        @include tablets {
+          padding: 1rem 2rem;
+        }
       }
     }
   }
@@ -26,16 +38,27 @@ header {
     padding-top: 1rem;
     li {
       &:before {
-        color: $backgroundColor;
+        color: $backgroundColorTop;
+        @include desktops {
+          color: $textColor;
+        }
       }
     }
   }
   section {
     height: 100%;
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    @include tablets {
+      flex-direction: column;
+    }
+    @include desktops {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
 
     div {
       margin: 1rem;
@@ -45,7 +68,7 @@ header {
 
       .button {
         a {
-          font-size: 0.8rem;
+          // font-size: 0.8rem;
           color: $secondaryColor;
           background: $accentColor;
           border: solid $accentColor;
@@ -55,8 +78,27 @@ header {
     .header-img {
       display: none;
       @include tablets {
+        margin: 0;
         display: block;
+        object-fit: cover;
+        min-width: 30%;
+        max-width: 65%;
+        margin-left: 1rem;
+        height: auto;
       }
     }
+  }
+  .header-text {
+    @include desktops {
+      width: 40%;
+      margin: 0 auto;
+      padding: 0 1rem;
+      padding-top: 15%;
+    }
+  }
+
+  @include desktops {
+    color: $textColor;
+    background: none;
   }
 }
