--- a/src/_utilities.scss
+++ b/src/_utilities.scss
@@ -31,7 +31,7 @@
   cursor: pointer;
   a {
     font-family: "Montserrat";
-    color: $backgroundColor;
+    color: $backgroundColorTop;
     text-align: center;
     font-size: $sm-font-size;
     font-weight: 800;
